--- a/.github/workflows/download_dispatch.yml
+++ b/.github/workflows/download_dispatch.yml
@@ -22,7 +22,7 @@ on:
       IMAGE_SUFFIX:
         type: string
         description: 图片后缀（download.cache.suffix），默认为空，表示不做图片格式转换。可填入例如 'png' 'jpg'
-        default: ''
+        default: 'jpg'
         required: false
 
       DIR_RULE:
